2005-07-24  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* lily/smobs.cc (protect_smob): experiment: O(1) GC (un)protection.

	* lily/include/smobs.hh (DECLARE_BASE_SMOBS): add methods
	protect() and unprotect(). Use throughout.

2005-07-24  Nicolas Sceaux  <nicolas.sceaux@free.fr>

	* Documentation/topdocs/NEWS.tely: new item for \displayLilyMusic

	* scm/define-music-display-methods.scm (markup->lily-string):
	markup elements can also be strings (without simple-markup
	appended)

2005-07-24  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* lily/context.cc (where_defined): also assign value in
	where_defined().

	* lily/bezier.cc (get_other_coordinate): use curve_coordinate
	(curve_coordinate): new function

	* lily/simple-spacer.cc (add_columns): only add rods between
	column i and begin/end if keep-inside-line is set (this repleces
	allow-outside-line as default)

2005-07-23  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* lily/tuplet-engraver.cc (start_translation_timestep): only read
	tupletSpannerDuration if applicable.

	* lily/font-size-engraver.cc (process_music): read fontSize only
	once per timestep.

 	* lily/engraver*cc: use throughout.
	
	* lily/include/translator.icc (ADD_ACKNOWLEDGER): new macro.

	* lily/translator.cc (add_acknowledger): new file. Directly jump
	into an Engraver::acknowledge_xxx () method based on a grobs
	interface-list.

	* lily/include/translator-dispatch-list.hh (class
	Engraver_dispatch_list): new struct, new file.

	* scm/define-context-properties.scm
	(all-internal-translation-properties): remove acceptHashTable,
	acknowledgeHashTable

	* lily/translator-group.cc (mark_smob): idem for acceptHashTable.

	* lily/engraver-group-engraver.cc (Engraver_group_engraver):
	change acknowledgeHashTable to C++ member. 

	* lily/rest-collision.cc (do_shift): use extract_grob_set().

2005-07-22  Nicolas Sceaux  <nicolas.sceaux@free.fr>

	* scm/display-lily.scm: new file. Define a `display-lily-music'